syntax = "proto3";

package chat;

service chatService {
    rpc GetVisitor(GetVisitorRequest) returns (GetVisitorResponse) {}
    rpc GetMessage(stream GetMessageRequest) returns (stream GetMessageResponse) {}
}

message GetVisitorRequest {
    int32 visitor_id = 1;
}

message Visitor {
    int32 id = 1;
    string name = 2;
}

message GetVisitorResponse {
    Visitor visitor = 1;
}

message GetMessageRequest {
    int32 from_id = 1;
}

message ChatMessage {
    int32 id = 1;
    int32 from_id = 2;
    string content = 3;
    int64 created_at = 4;
}

message GetMessageResponse {
    repeated ChatMessage messages = 1;
}